Scripted backup on 06/02/22

--- a/Main/Course TOC/CE332.md
+++ b/Main/Course TOC/CE332.md
@@ -2,10 +2,13 @@
 Lecturer: Ardiansyah
 
 ## Table of Contents
-| Week                      | Title                                                  | 
-| ------------------------- | ------------------------------------------------------ |
-| [[CE332-W01\|Week 01]] | Introduction to Computer Organization and Architecture |
+| Week                   | Title                                                  |
+| ---------------------- | ------------------------------------------------------ |
+| [[CE332-W01\|Week 01]] | Introduction to Computer Organization and Architecture | 
 
+
+## Assignments 
+[[Tugas-M01-Embedded System Microcontroller]]
 ## Resources
 Textbook:
 [[William Stallings - Computer Organization and Architecture Designing for Performance 10th Edition-Pearson (2016).pdf]]
