--- a/Main/Course TOC/IF230.md
+++ b/Main/Course TOC/IF230.md
@@ -1,10 +1,10 @@
 # IF230 - Algorithms & Data Structure
-Lecturer: 
+Lecturer: Alethea Suryadibrata
 
 ## Table of Contents
-| Week | Title |
-| ---- | ----- |
-|      |       |
+| Week          | Title               |
+| ------------- | ------------------- |
+| [[IF230-W01]] | Pointer and Array 1 | 
 
 ## Resources
 Textbook:
