Scripted backup on 10/02/22

--- a/Notes/Fleet Notes/06022022-GPU.md
+++ b/Notes/Fleet Notes/06022022-GPU.md
@@ -3,3 +3,6 @@
 Section: [[CE332-W01]]
 Tags: #gpu #microcontroller 
 
+We already know that most of our computers processing was done mostly by the CPU, but for graphics-related process, it's mostly done by another processor in our PCs called GPU. Graphics Processing Unit or GPU is mostly kind of same with CPU, but they have completely different architectures and are built for different purposes. The CPU is suited for wide variety of workloads, this is because CPU focuses its smaller number of core to do individual tasks and get the jobs done quickly.
+
+Meanwhile, GPU mainly works on 3D and graphics-related rendering tasks. It made up of many smaller and more specialized cores and the cores work together to deliver massive performance when a processing task can be divided up and processed across many cores, but in exchange GPU only have smaller instruction set, and don't have the ability to manage every input and output inside a computer.
